slack integration test method added.

--- a/MoneyMarket.Api/Views/Home/GrantSuccess.cshtml
+++ b/MoneyMarket.Api/Views/Home/GrantSuccess.cshtml
@@ -23,3 +23,8 @@ else
         <span>(@ViewBag.Error)</span>
         </div>
 }
+
+
+<div class="alert alert-success hide">
+    <span> @ViewBag.SlackMessage</span>
+</div>
